--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "node index.js"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.15.3",
     "multer": "^1.3.0",
-    "opencv": "^6.0.0"
+    "opencv": "^6.0.0",
+    "request": "^2.81.0"
   }
 }
